--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Ankush's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/ankushthakur0/resume/raw/main/Ankush%20Thakur%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <embed type="application/x-google-chrome-pdf" src="chrome-extension://mhjfbmdgcfjbbpaeojofohoefgiehjai/66c913a2-2c06-4f01-972f-c5771c458402" original-url="https://github.com/ankushthakur0/resume/blob/main/Ankush%20Thakur%20Resume.pdf" background-color="4283586137" javascript="allow" full-frame="">
   </body>
 </html>
